Added user roles to jwt token